--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,30 @@
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
-<body>
+<body id="mybody">
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<div id="container">
+  <div id="header">
+    <div id="logo_box">
+      <div id="logo_text">
+        <%= link_to_unless_current("BAMRU Private Webpage", '/') %>
+      </div>
+    </div>
+    <div id ="head_nav_box">
+      <div id="head_nav_text"><%= "Internal team use only" %></div>
+    </div>
+    <div class="clear"></div>
+  </div>
 
-<%= yield %>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+
+  <%= yield %>
+
+  <div id="footer">
+    <%= "FOOTER NAV GOES HERE" %>
+  </div>
+</div>
 
 </body>
 </html>
