--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,9 +11,9 @@
               <table border="0" cellpadding="0" cellspacing="0" align="left" width="100%">
                 <tr>
                   <td class="body" align="left">
-                    <A href="./page"><b>Pager notification and telephone roster</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
-                    <A href='./page/index.php?id=71' class='small'><i>Edit my contact info</i></A><br>            </td>
-                  <td class="body" align="right"><A href="./smcsopagers.html">SMSO pagers</A>
+                    <A href="/members"><b>Pager notification and telephone roster</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
+                    <A href="/members/<%=current_user.id%>/edit" class='small'><i>Edit my contact info</i></A><br>            </td>
+                  <td class="body" align="right"><A href="/home/tbd">SMSO pagers</A>
                   </td>
                 </tr>
                 <tr>
@@ -22,8 +22,8 @@
                 </tr>
                 <tr>
                   <td rowspan="2" class="body" bgcolor="white">
-                    <A href="./page/photo/unit_photos.php"><b>Photo roster</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
-                    <A href='./page/photo/index.php?id=71' class='small'><i>Edit my photos</i></A><span class=bullet><font size=1 color=#e89a9a><i>&nbsp;&nbsp;&bull;&nbsp;&nbsp;new</i></font></span><br>            </td>
+                    <A href="/home/tbd"><b>Photo roster</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
+                    <A href='/home/tbd' class='small'><i>Edit my photos</i></A><span class=bullet><font size=1 color=#e89a9a><i>&nbsp;&nbsp;&bull;&nbsp;&nbsp;new</i></font></span><br>            </td>
                 </tr>
               </table>
               </font>
@@ -34,12 +34,12 @@
           </tr>
           <tr>
             <td valign="top" bgcolor="white"><font size="2" class="body">
-              <A href="./page/availability/unit_availability.php"><b>Unit availability</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
-              <A href='./page/availability/index.php?id=71' class='small'><i>Edit my availability</i></A><br>          <p>
-              <A href="./page/duty/duty_roster.php"><b>Duty Officer schedule</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
-              <A href='./page/duty/index.php?id=71' class='small'><i>Edit my DO availability</i></A><br>          <p>
-              <A href="/calendar.php"><b>Public webpage calendar</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
-              <A href='/editcalendar.php' class='small'><i>Edit the public webpage calendar</i></A><br>          <p>
+              <A href="/home/tbd"><b>Unit availability</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
+              <A href='/home/tbd' class='small'><i>Edit my availability</i></A><br>          <p>
+              <A href="/home/tbd"><b>Duty Officer schedule</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
+              <A href='/home/tbd' class='small'><i>Edit my DO availability</i></A><br>          <p>
+              <A href="http://bamru.info/calendar"><b>Public webpage calendar</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
+              <A href='http://bamru.info/admin' class='small'><i>Edit the public webpage calendar</i></A><br>          <p>
             </font>
             </td>
           </tr>
@@ -47,7 +47,7 @@
             <td valign="top" class="body" bgcolor="#eeeeee"><I><b><font color="#333333" size="2">Member Library</font></b></I><br></td>
           </tr>
           <tr>
-            <td valign="top" bgcolor="white"><font size="2" class="body"><b><a href="./wiki">BamruWiki</a></b><br></font></td>
+            <td valign="top" bgcolor="white"><font size="2" class="body"><b><a href="/home/tbd">BamruWiki</a></b><br></font></td>
           </tr>
           <tr>
             <td align="right" class="body" bgcolor="#cccccc"></td>
@@ -58,4 +58,3 @@
   </table>
 
 </div>
-<p/>
