--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <div id="header">
     <table width=100%><tr height=30>
       <td style="font-size:23px;" width=400>
-        <%= link_to_unless_current("BAMRU Private Webpage", '/') %>
+        <%= link_to_unless_current("Private Webpage", '/') %>
       </td>
       <td align=center valign=bottom>
         Internal Use Only
