--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -11,7 +11,7 @@
   <tr>
     <td><%=member.email%></td>
     <td><%# link_to 'Show', member %></td>
-    <td><%= link_to 'Edit', edit_member_path(member) %></td>
+    <td><%= link_to 'Edit', edit_user_path(member) %></td>
     <td><%# link_to 'Destroy', member, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
@@ -19,4 +19,4 @@
 
 <br />
 
-<%= link_to 'New Member', new_member_path %>
+<%= link_to 'New Member', new_user_path %>
