--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -435,3 +435,8 @@ label.collection_check_boxes {
   margin-left:   2px;
 }
 
+/*.body { color: black; font-size: 12px; line-height: 16px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }*/
+.detailname { color: black; font-size: 15px; font-weight: bold; line-height: 19px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }
+.detailmembertype { color: #888888; font-size: 12px; line-height: 14px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }
+.note { color: #888888; font-size: 10px; line-height: 14px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }
+.addcontact { color: #AAAAAA; font-size: 9px; line-height: 12px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }
