--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,9 @@
-/* Misc Styles */
+/*
+*= require_tree .
+*/
 
 #mybody {
-  background-color: #ff0000;
+  background-color: #0099cc;
   font-family: Verdana, Helvetica, Arial;
   font-size: 14px;
 }
@@ -440,3 +442,4 @@ label.collection_check_boxes {
 .detailmembertype { color: #888888; font-size: 12px; line-height: 14px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }
 .note { color: #888888; font-size: 10px; line-height: 14px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }
 .addcontact { color: #AAAAAA; font-size: 9px; line-height: 12px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }
+
