--- a/archive/app/views/home/index.html.erb
+++ b/archive/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
                 <tr>
                   <td class="body" align="left">
                     <A href="/members"><b>Pager notification and telephone roster</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
-                    <A href="/members/<%=current_user.id%>/edit" class='small'><i>Edit my contact info</i></A><br>            </td>
+                    <A href="/members/<%=current_member.id%>/edit" class='small'><i>Edit my contact info</i></A><br>            </td>
                   <td class="body" align="right"><A href="/home/tbd">SMSO pagers</A>
                   </td>
                 </tr>
