routes, controllers, views for all actions

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,1 +1,5 @@
-This is members#show
+This is members#show<p/>
+
+Member name is <%= @member.first_name %><p/>
+
+<%= link_to("Edit", edit_member_path(@member)) %>
