--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,25 +22,38 @@
                 </tr>
                 <tr>
                   <td rowspan="2" class="body" bgcolor="white">
-                    <A href="/home/tbd"><b>Photo roster</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
-                    <A href='/home/tbd' class='small'><i>Edit my photos</i></A><span class=bullet><font size=1 color=#e89a9a><i>&nbsp;&nbsp;&bull;&nbsp;&nbsp;new</i></font></span><br>            </td>
+                    <A href="<%= unit_photos_path %>"><b>Photo roster</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
+                    <A href='<%= member_photos_path(current_member) %>' class='small'><i>Edit my photos</i></A><br>            </td>
                 </tr>
               </table>
               </font>
             </td>
           </tr>
+
+          <tr>
+            <td valign="top" class="body" bgcolor="#eeeeee"><I><b><font color="#333333" size="2">Certifications</font></b></I><br></td>
+          </tr>
+          <tr>
+            <td valign="top" bgcolor="white"><font size="2" class="body">
+              <A href="<%= unit_certs_path %>"><b>Unit certifications</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
+              <A href='<%= member_certs_path(current_member) %>' class='small'><i>Edit my certifications</i></A>
+            </font>
+            </td>
+          </tr>          
+
           <tr>
             <td valign="top" class="body" bgcolor="#eeeeee"><I><b><font color="#333333" size="2">Calendars and Availability</font></b></I><br></td>
           </tr>
           <tr>
-            <td valign="top" bgcolor="white"><font size="2" class="body">
-              <A href="/home/tbd"><b>Unit availability</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
-              <A href='/home/tbd' class='small'><i>Edit my availability</i></A><br>          <p>
-              <A href="/home/tbd"><b>Duty Officer schedule</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
-              <A href='/home/tbd' class='small'><i>Edit my DO availability</i></A><br>          <p>
-              <A href="http://bamru.info/calendar"><b>Public webpage calendar</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
-              <A href='http://bamru.info/admin' class='small'><i>Edit the public webpage calendar</i></A><br>          <p>
-            </font>
+            <td valign="top" bgcolor="white">
+              <font size="2" class="body">
+                <A href="<%= oot_roster_path %>"><b>Unit availability</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
+                <A href='<%=member_oots_path(current_member)%>' class='small'><i>Edit my availability</i></A><br>          <p>
+                <A href="<%= do_schedules_path %>"><b>Duty Officer schedule</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
+                <A href='<%= member_do_avails_path(current_member) %>' class='small'><i>Edit my DO availability</i></A><br>          <p>
+                <A href="http://bamru.info/calendar"><b>Public webpage calendar</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
+                <A href='http://bamru.info/admin' class='small'><i>Edit the public webpage calendar</i></A>
+              </font>
             </td>
           </tr>
           <tr>
