--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -49,7 +49,7 @@
               <font size="2" class="body">
                 <A href="<%= oot_roster_path %>"><b>Unit availability</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
                 <A href='<%=member_oots_path(current_member)%>' class='small'><i>Edit my availability</i></A><br>          <p>
-                <A href="<%= do_schedules_path %>"><b>Duty Officer schedule</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
+                <A href="<%= do_schedule_path %>"><b>Duty Officer schedule</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
                 <A href='<%= member_do_avails_path(current_member) %>' class='small'><i>Edit my DO availability</i></A><br>          <p>
                 <A href="http://bamru.info/calendar"><b>Public webpage calendar</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
                 <A href='http://bamru.info/admin' class='small'><i>Edit the public webpage calendar</i></A>
