--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -1,5 +1,27 @@
-Edit form<p/>
+<%= javascript_include_tag "equal_height.js" %>
 
-Editing <%= @member.first_name %><p/>
-
-<%= link_to("BACK", members_path) %>
+<div id=x_container>
+  <div id=x_body>
+    <div id=x_header>
+      <div id=x_header_left>
+        Member Detail
+      </div>
+      <div id=x_header_right>
+        Pull Down Goes Here
+      </div>
+      <div id=x_header_bottom>
+        <%= link_to("Save", members_path) %> | <%= link_to("Cancel", member_path(@member)) %>
+       </div>
+    </div>
+    <div id=x_left_col>
+      <%= @member.first_name %> <%= @member.last_name %><br/>
+      <%= @member.typ %>
+    </div>
+    <div id=x_right_col>
+      More great stuff
+    </div>
+    <div id=x_footer>
+      footer content here
+    </div>
+  </div>
+</div>
