--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -16,6 +16,8 @@
     <div id=x_left_col>
       <b><%= @member.first_name %> <%= @member.last_name %><br/></b>
       <%= @member.typ %><p/>
+      <b>Ham:</b> <%= @member.ham %><br/>
+      <b>V9:</b> <%= @member.v9 %><p/>
       <%= raw @member.all_assoc %>
     </div>
     <div id=x_right_col>
