--- a/app/views/unit_photos/index.html.erb
+++ b/app/views/unit_photos/index.html.erb
@@ -1,1 +1,7 @@
-unit photos go here !!
+<h2>Unit Photos!</h2>
+
+There are <%= @photos.count %> images.<p/>
+
+<%= @photos.each do |pic| %>
+  <%= image_tag pic.image.url(:thumb) %><br/>
+<% end %>
