--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
                   <td class="body" align="left">
                     <A href="/members"><b>Pager notification and telephone roster</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
                     <A href="/members/<%=current_member.id%>/edit" class='small'><i>Edit my contact info</i></A><br>            </td>
-                  <td class="body" align="right"><A href="/home/tbd">SMSO pagers</A>
+                  <td class="body" align="right"><A href="/smso_pagers.html">SMSO pagers</A>
                   </td>
                 </tr>
                 <tr>
