--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,10 +1,28 @@
-<%= javascript_include_tag "checkbox2.js" %>
+<%= javascript_include_tag "checkbox.js" %>
 <%= javascript_include_tag "equal_height.js" %>
-<%= javascript_include_tag "jquery.tablesorter.min.js"%>
+<%= javascript_include_tag "jquery.tablesorter.min.js" %>
+<%= javascript_include_tag "members.js" %>
 <script type="text/javascript">
   $(document).ready(function()
   {
-    $("#myTable").tablesorter({headers: {1: {sorter:false},2:{sorter:false}}});
+    $.tablesorter.addParser({
+      id: 'last_name',
+      is: function(s) { return false; },    // turn off format auto-detect
+      format: function(s) { return ((new MemberName(s)).last_name()); },
+      type: 'text'    // either numeric or text
+    });
+    $.tablesorter.addParser({
+      id: 'role_score',
+      is: function(s) { return false; },    // turn off format auto-detect
+      format: function(s) { return ((new RoleScore(s)).score()); },
+      type: 'text'    // either numeric or text
+    });
+    $("#myTable").tablesorter({headers: {
+                                           0: {sorter: 'role_score'},
+                                           1: {sorter:false},
+                                           2: {sorter:false},
+                                           3: {sorter:'last_name'}
+                                }});
   });
 </script>
 
@@ -37,7 +55,7 @@
     </div>
     <div id=x_right_col>
       Select by member type:<br/>
-      <input type="checkbox" class="slx" id=cb_BD> Board of Directors (Bd)<br/>
+      <input type="checkbox" class="slx" id=cb_Bd> Board of Directors (Bd)<br/>
       <input type="checkbox" class="slx" id=cb_OL> Operations Leader (OL)<br/>
       <input type="checkbox" class="slx" id=cb_TM> Technical Member (TM)<br/>
       <input type="checkbox" class="slx" id=cb_FM> Field Member (FM)<br/>
