--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -11,6 +11,7 @@
       Team Roster / Paging
     </div>
     <div id=x_left_col>
+
       <table id="myTable" class="tablesorter" style="margin-top: 0px;">
         <thead>
         <tr>
@@ -33,10 +34,10 @@
       </table>
     </div>
     <div id=x_right_col>
-      <b>Select by member type:</b>
-      <span style="margin-left: 70px;">
-        <input type=submit value="Clear All" id="clear_all">
-      </span><br/>
+      <table width=100%><tr>
+        <td><span style='font-size: 14px;'><b>Select by member type:</b></span></td>
+        <td align=right><input type=submit value="Clear All" id="clear_all"></td>
+      </tr></table>
       <input type="checkbox" class="slx" id=cb_Bd> Board of Directors (Bd)<br/>
       <input type="checkbox" class="slx" id=cb_OL> Operations Leader (OL)<br/>
       <input type="checkbox" class="slx" id=cb_TM> Technical Member (TM)<br/>
@@ -46,17 +47,20 @@
       <input type="checkbox" class="slx" id=cb_S > Support (S)<br/>
       <input type="checkbox" class="slx" id=cb_A > Associate (A)<br/>
 
-      <div style="padding: 2px; margin-top:15px; margin-bottom:15px; background-color:lightblue;">
-        <table>
-          <tr><td align=right><b>To:</b></td><td><span id="addr_count">0 addresses</span></td></tr>
-          <tr><td align=right><b>From:</b></td><td><%= current_member.full_name %></td></tr>
-        </table>
+      <div style="padding: 4px; margin-top:15px; margin-bottom:15px; background-color:lightblue;">
+        <table width=100%><tr>
+          <td><b>To:</b> <span id="addr_count">0 addresses</span></td>
+          <td align=right><b>From:</b> <%= current_member.short_name %></td>
+        </tr></table>
         <textarea id="message_area" name="message" rows="10" style="width: 290px;">
         </textarea>
-        <br/><span style="font-size: 10px; margin-right: 50px;">
-          You have <span id="chars_remaining">132</span> characters left.
-        </span>
-        <input type="submit" name="message_submit" value="Send message">
+        <table width=100%><tr>
+          <td>
+            <span style='font-size: 10px;'>You have <span id="chars_remaining">132</span> characters left.</span>
+          </td>
+          <td align=right><input type="submit" name="message_submit" value="Send message"></td>
+        </tr></table>
+        
       </div>
 
       <%= render :partial => 'smso' %>
