--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -10,7 +10,7 @@
     <div id=x_header>
       Team Roster / Paging
     </div>
-    <form action='/messages' method='post'>
+    <%= form_for @message do |f| %>
       <input type="hidden" name="message[member_id]" value="<%=current_member.id%>"/>
       <input type="hidden" name="message[ip_address]" value="<%=@client_ip%>"/>
     <div id=x_left_col>
@@ -64,7 +64,7 @@
 
     </div>
         </form>
-    <%# end %>
+    <% end %>
     <div id=x_footer>
       footer content here
     </div>
