message log works

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
   <%= yield %>
 
   <div id="footer">
-    <%= "FOOTER NAV GOES HERE" %>
+    <table align="center"><tr><td>Internal Use Only</td></tr></table>
   </div>
   <div class ="debug"><%= raw debug_footer_text %></div>
 </div>
