--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -11,63 +11,70 @@
       Team Roster / Paging
     </div>
     <%= form_for @message do |f| %>
-      <input type="hidden" name="message[member_id]" value="<%=current_member.id%>"/>
+      <input type="hidden" name="message[author_id]" value="<%=current_member.id%>"/>
       <input type="hidden" name="message[ip_address]" value="<%=@client_ip%>"/>
-    <div id=x_left_col>
-      <table id="myTable" class="tablesorter" style="margin-top: 0px;">
-        <thead>
-        <tr>
-          <th>Role</th>
-          <th><img src="/images/page.gif" border=0></th>
-          <th><img src="/images/mail.gif" border=0></th>
-          <th>Name</th>
-        </tr>
-        </thead>
-        <tbody>
-        <% @members.each do |m| %>
-        <tr>
-          <td><%= m.full_roles %></td>
-          <%= raw phone_checkbox(m) %>
-          <%= raw email_checkbox(m) %>
-          <td class=link><a href="/members/<%= m.id %>"><%= m.full_name %></a></td>
-        </tr>
-        <% end %>
-        </tbody>
-      </table>
-    </div>
-    <div id=x_right_col>
-      <table width=100%><tr>
-        <td><span style='font-size: 14px;'><b>Select by member type:</b></span></td>
-        <td align=right><input type=submit value="Clear All" id="clear_all"></td>
-      </tr></table>
-      <input type="checkbox" class="slx" id=cb_Bd> Board of Directors (Bd)<br/>
-      <input type="checkbox" class="slx" id=cb_OL> Operations Leader (OL)<br/>
-      <input type="checkbox" class="slx" id=cb_TM> Technical Member (TM)<br/>
-      <input type="checkbox" class="slx" id=cb_FM> Field Member (FM)<br/>
-      <input type="checkbox" class="slx" id=cb_T > Trainee (T)<br/>
-      <input type="checkbox" class="slx" id=cb_R > Reserve (R)<br/>
-      <input type="checkbox" class="slx" id=cb_S > Support (S)<br/>
-      <input type="checkbox" class="slx" id=cb_A > Associate (A)<br/>
-
-      <div style="padding: 4px; margin-top:15px; margin-bottom:15px; background-color:lightblue;">
-        <table width=100%><tr>
-          <td><b>To:</b> <span id="addr_count">0 addresses</span></td>
-          <td align=right><b>From:</b> <%= current_member.short_name %></td>
-        </tr></table>
-        <textarea id="message_area" name="message[text]" rows="10" style="width: 290px;">
-        </textarea>
-        <div style="font-size:10px; margin-bottom: 2px;">You have <span id="chars_remaining">132</span> characters left.
-        <input style='margin-left: 90px; width: 60px;' type="submit" value="Send"/></div>
+      <div id=x_left_col>
+        <table id="myTable" class="tablesorter" style="margin-top: 0px;">
+          <thead>
+          <tr>
+            <th>Role</th>
+            <th><img src="/images/page.gif" border=0></th>
+            <th><img src="/images/mail.gif" border=0></th>
+            <th>Name</th>
+          </tr>
+          </thead>
+          <tbody>
+          <% @members.each do |m| %>
+            <tr>
+              <td><%= m.full_roles %></td>
+              <%= raw phone_checkbox(m) %>
+              <%= raw email_checkbox(m) %>
+              <td class=link><a href="/members/<%= m.id %>"><%= m.full_name %></a></td>
+            </tr>
+          <% end %>
+          </tbody>
+        </table>
       </div>
+      <div id=x_right_col>
+        <table width=100%><tr>
+          <td><span style='font-size: 14px;'><b>Select by member type:</b></span></td>
+          <td align=right><input type=submit value="Clear All" id="clear_all"></td>
+        </tr></table>
+        <input type="checkbox" class="slx" id=cb_Bd> Board of Directors (Bd)<br/>
+        <input type="checkbox" class="slx" id=cb_OL> Operations Leader (OL)<br/>
+        <input type="checkbox" class="slx" id=cb_TM> Technical Member (TM)<br/>
+        <input type="checkbox" class="slx" id=cb_FM> Field Member (FM)<br/>
+        <input type="checkbox" class="slx" id=cb_T > Trainee (T)<br/>
+        <input type="checkbox" class="slx" id=cb_R > Reserve (R)<br/>
+        <input type="checkbox" class="slx" id=cb_S > Support (S)<br/>
+        <input type="checkbox" class="slx" id=cb_A > Associate (A)<br/>
 
-      <%= render :partial => 'smso' %>
+        <div style="padding: 4px; margin-top:15px; margin-bottom:15px; background-color:lightblue;">
+          <table width=100%><tr>
+            <td><b>To:</b> <span id="addr_count">0 addresses</span></td>
+            <td align=right><b>From:</b> <%= current_member.short_name %></td>
+          </tr></table>
+          <textarea id="message_area" name="message[text]" rows="10" style="width: 290px;"></textarea>
+          <div style="font-size:10px; margin-bottom: 2px;">You have <span id="chars_remaining">132</span> characters left.
+            <input style='margin-left: 90px; width: 60px;' type="submit" value="Send"/></div>
+        </div>
+        <div style="font-size: 10px;">
+          <i>
+            PLEASE NOTE: Message content, IP addresses, and message recipients are logged for each message sent on this system.
+            <p/>
+            Last message sent on <%= Message.last.created_at unless Message.last.blank? %><br/>
+            <a href="/messages">View message log</a>
+          </i>
+        </div>
+        <p/>
 
-    </div>
-        </form>
+        <%= render :partial => 'smso' %>
+
+      </div>
+      </form>
     <% end %>
     <div id=x_footer>
-      footer content here
+      Team Roster / Paging
     </div>
   </div>
 </div>
-
