--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -38,7 +38,7 @@
       <div id=x_right_col>
         <table width=100%><tr>
           <td><span style='font-size: 14px;'><b>Select by member type:</b></span></td>
-          <td align=right><input type=submit value="Clear All" id="clear_all"></td>
+          <td align=right><input type=button value="Clear All" id="clear_all"></td>
         </tr></table>
         <input type="checkbox" class="slx" id=cb_Bd> Board of Directors (Bd)<br/>
         <input type="checkbox" class="slx" id=cb_OL> Operations Leader (OL)<br/>
