--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -3,15 +3,11 @@
 <div id=x_container>
   <div id=x_body>
     <div id=x_header>
-      <div id=x_header_left>
-        Member Detail
-      </div>
-      <div id=x_header_right>
-        Pull Down Goes Here
-      </div>
-      <div id=x_header_bottom>
-        <%= link_to("Edit", edit_member_path(@member)) %> | Delete
-       </div>
+      <table width=100%><tr>
+        <td align=left width=33%>Member Detail</td>
+        <td align=center width=33%><%= link_to("Roster", members_path) %> | <%= link_to("Edit", edit_member_path(@member)) %> | Delete</td>
+        <td align=right width=33%>Pull Down Goes Here</td>
+      </tr></table>
     </div>
     <div id=x_left_col>
       <b><%= @member.first_name %> <%= @member.last_name %><br/></b>
@@ -21,10 +17,10 @@
       <%= raw @member.all_assoc %>
     </div>
     <div id=x_right_col>
-      More great stuff
+      Photos go here...
     </div>
     <div id=x_footer>
-      footer content here
+      
     </div>
   </div>
 </div>
