--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -3,45 +3,46 @@
 <div id=x_container>
   <div id=x_body>
     <div id=x_header>
-      <div id=x_header_left>
-        Member Detail
-      </div>
-      <div id=x_header_right>
-        Pull Down Goes Here
-      </div>
-      <div id=x_header_bottom>
-        <%= link_to("Save", members_path) %> | <%= link_to("Cancel", member_path(@member)) %>
-       </div>
+      <table width=100%><tr>
+        <td align=left width=33%>Member Edit</td>
+        <td align=center width=33%><%= link_to("Roster", members_path) %> | <%= link_to("Cancel", member_path(@member)) %></td>
+        <td align=right width=33%>Pull Down Goes Here</td>
+      </tr></table>
     </div>
-    <div>
+    <div id=x_left_col>
+      <p/>
       <%= simple_form_for @member do |f| %>
-        <%= f.input :first_name %>
-        <%= f.input :last_name %>
-        <%= f.input :password %>
-        <%= f.input :password_confirmation, :label => "Confirmation" %>
-        <%= f.input :ham %>
-        <%= f.input :v9 %>
+        <%= f.input :first_name, :input_html => {:size => 22} %>
+        <%= f.input :last_name, :input_html => {:size => 22} %>
+        <%= f.input :password, :input_html => {:size => 22} %>
+        <%= f.input :password_confirmation, :label => "Confirmation", :input_html => {:size => 22} %>
+        <%= f.input :ham, :input_html => {:size => 22} %>
+        <%= f.input :v9, :input_html => {:size => 22} %>
         <p/>Phones<br/>
         <%= f.simple_fields_for :phones do |phone| %>
-          <%= phone.input :number %>
-          <%= phone.input :typ %>
+          <%= phone.input :number, :input_html => {:size => 22} %>
+          <%= phone.input :typ, :input_html => {:size => 22} %>
         <% end %>
         <p/>Addresses<br/>
         <%= f.simple_fields_for :addresses do |address| %>
-          <%= address.input :address1 %>
-          <%= address.input :address2 %>
-          <%= address.input :typ %>
+          <%= address.input :address1, :input_html => {:size => 22} %>
+          <%= address.input :address2, :input_html => {:size => 22} %>
+          <%= address.input :typ, :input_html => {:size => 22} %>
         <% end %>
         <p/>eMails<br/>
         <%= f.simple_fields_for :emails do |email| %>
-          <%= email.input :address %>
-          <%= email.input :typ %>
+          <%= email.input :address, :input_html => {:size => 22} %>
+          <%= email.input :typ, :input_html => {:size => 22} %>
         <% end %>
         <%= f.button :submit %>
+        <p/>
       <% end %>
     </div>
+    <div id=x_right_col>
+      Photos go here...
+    </div>
     <div id=x_footer>
-      footer content here
+
     </div>
   </div>
 </div>
