--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,4 +1,8 @@
+<script>var autoselectMemberNames = [ <%= @autoselect_member_names %> ];</script>
+
 <%= javascript_include_tag "equal_height.js" %>
+<%= javascript_include_tag "jquery-ui.min.js" %>
+<%= javascript_include_tag "members_autoselect.js" %>
 
 <div id=x_container>
   <div id=x_body>
@@ -6,7 +10,9 @@
       <table width=100%><tr>
         <td align=left width=33%>Member Detail</td>
         <td align=center width=33%><%= link_to("Roster", members_path) %> | <%= link_to("Edit", edit_member_path(@member)) %> | Delete</td>
-        <td align=right width=33%>Pull Down Goes Here</td>
+        <td align=right width=33%>
+            <input size=14 id="autoselect" value="Find Member">
+        </td>
       </tr></table>
     </div>
     <div id=x_left_col>
