photo sorting works

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,7 +23,7 @@
                 <tr>
                   <td rowspan="2" class="body" bgcolor="white">
                     <A href="<%= unit_photos_path %>"><b>Photo roster</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
-                    <A href='<%= member_photos_path(current_member) %>' class='small'><i>Edit my photos</i></A><br>            </td>
+                    <A href='<%= edit_member_path(current_member) %>' class='small'><i>Edit my photos</i></A><br>            </td>
                 </tr>
               </table>
               </font>
