fixed bug in member table sorting

--- a/app/views/avail_ops/new.html.erb
+++ b/app/views/avail_ops/new.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @oot, :url => member_oots_path(@member) do |oot| %>
+<%= simple_form_for @avail, :url => member_avails_path(@member) do |oot| %>
   <%= oot.input :start %>
   <%= oot.input :end %>
   <%= oot.input :description %>
