--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,10 +47,10 @@
           <tr>
             <td valign="top" bgcolor="white">
               <font size="2" class="body">
-                <A href="<%= unit_oots_path %>"><b>Unit availability</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
-                <A href='<%=member_oots_path(current_member)%>' class='small'><i>Edit my availability</i></A><br>          <p>
-                <A href="<%= udo_quarters_path %>"><b>Duty Officer schedule</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
-                <A href='<%= member_pdo_quarters_path(current_member) %>' class='small'><i>Edit my DO availability</i></A><br>          <p>
+                <A href="<%= unit_avail_ops_path %>"><b>Unit operations availability</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
+                <A href='<%= member_avail_ops_path(current_member)%>' class='small'><i>Edit my availability for operations</i></A><br>          <p>
+                <A href="<%= do_assignments_path %>"><b>Duty Officer schedule</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
+                <A href='<%= member_avail_dos_path(current_member) %>' class='small'><i>Edit my DO availability</i></A><br>          <p>
                 <A href="http://bamru.info/calendar"><b>Public webpage calendar</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
                 <A href='http://bamru.info/admin' class='small'><i>Edit the public webpage calendar</i></A>
               </font>
